--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A app for people who has sclerosis
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.11+12
+version: 1.1.0+1.0
 
 environment:
   sdk: ">=2.2.0 <3.0.0"
@@ -22,8 +22,9 @@ dependencies:
 
   screen: ^0.0.5
   camera: ^0.4.3+2
-  firebase_ml_vision: ^0.6.0
-  firebase_admob: ^0.8.0+4
+  firebase_ml_vision: 0.6.0+2
+  firebase_admob: 0.9.0+7
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -51,6 +52,7 @@ flutter:
 
   assets:
     - images/
+    - images/life.jpg
     - images/menu/
     - images/alfabeto/
     - images/necessidades/
