--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,15 +24,19 @@ dependencies:
   camera: ^0.4.3+2
   firebase_ml_vision: 0.6.0+2
   firebase_admob: 0.9.0+7
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+
+  flutter_native_splash: ^0.1.9
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+
+flutter_native_splash:
+  image: images/life.jpg
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
