--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,16 @@ dependencies:
   screen: ^0.0.5
   camera: ^0.4.3+2
   firebase_ml_vision: 0.6.0+2
-  firebase_admob: 0.9.0+7
+  firebase_admob: ^0.9.0+9
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
   flutter_native_splash: ^0.1.9
+  path_provider: 1.4.2
+  gallery_saver:  1.0.6
+  image_picker: 0.6.1+11
+  flutter_file_manager: 0.2.0
 
 dev_dependencies:
   flutter_test:
@@ -55,7 +59,6 @@ flutter:
   #  - images/a_dot_ham.jpeg
 
   assets:
-    - images/
     - images/life.jpg
     - images/menu/
     - images/alfabeto/
