--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,4 @@
 org.gradle.jvmargs=-Xmx1536M
-android.useDeprecatedNdk=true 
-## DeprecatedNdk -> Solve android bug -> https://medium.com/mobiwise-blog/unsatisfiedlinkerror-problem-on-some-android-devices-b77f2f83837d
+
+android.useAndroidX=true
+android.enableJetifier=true
