--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   screen: ^0.0.5
   camera: ^0.4.3+2
   firebase_ml_vision: 0.6.0+2
-  firebase_admob: ^0.9.0+9
+  firebase_admob: 0.8.0+4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
