--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   screen: ^0.0.5
   camera: 0.5.0
   firebase_ml_vision: 0.9.3+3
-#  firebase_admob: 0.9.0+9
+  firebase_admob: 0.9.0+9
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
