--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A app for people who has sclerosis
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.2.1+2.1
+version: 1.2.2+2.2
 
 environment:
   sdk: ">=2.2.0 <3.0.0"
@@ -21,7 +21,7 @@ dependencies:
     sdk: flutter
 
   screen: ^0.0.5
-  camera: 0.5.0
+  camera: 0.4.3+2
   firebase_ml_vision: 0.9.3+3
   firebase_admob: 0.9.0+9
   # The following adds the Cupertino Icons font to your application.
